--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script src="/js/main.js"></script>
   </body>
 </html>
